infra/k8s/storage/test_template/lakekeeper_template.yaml
---
# Source: lakekeeper/templates/catalog/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openhouse-lakekeeper
  labels:
    helm.sh/chart: lakekeeper-0.7.1
    app.kubernetes.io/name: lakekeeper
    app.kubernetes.io/instance: openhouse-lakekeeper
    app.kubernetes.io/version: "0.9.3"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: lakekeeper
    app.kubernetes.io/component: catalog
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - port: 8181
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: lakekeeper
    app.kubernetes.io/instance: openhouse-lakekeeper
    app.kubernetes.io/component: catalog
---
# Source: lakekeeper/templates/catalog/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openhouse-lakekeeper
  labels:
    helm.sh/chart: lakekeeper-0.7.1
    app.kubernetes.io/name: lakekeeper
    app.kubernetes.io/instance: openhouse-lakekeeper
    app.kubernetes.io/version: "0.9.3"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: lakekeeper
    app.kubernetes.io/component: catalog
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: lakekeeper
      app.kubernetes.io/instance: openhouse-lakekeeper
      app.kubernetes.io/component: catalog
  template:
    metadata:
      annotations:
        checksum/secret-config-envs: 53043ec641f04be8f159bf462d97c930c92e2d8b74bc1105b27c5c64dcfb210f
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        helm.sh/chart: lakekeeper-0.7.1
        app.kubernetes.io/name: lakekeeper
        app.kubernetes.io/instance: openhouse-lakekeeper
        app.kubernetes.io/version: "0.9.3"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: lakekeeper
        app.kubernetes.io/component: catalog
    spec:
      restartPolicy: Always
      serviceAccountName: default
      containers:
        - name: lakekeeper          
          image: hub.vtcc.vn:8989/lakekeeper/catalog:v0.9.5
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 65532
            runAsGroup: 65534
          ports:
            - name: http
              containerPort: 8181
              protocol: TCP
            - name: metrics
              containerPort: 9000
              protocol: TCP
          args:
            - serve
          livenessProbe:
            initialDelaySeconds: 1
            periodSeconds: 5
            failureThreshold: 5
            timeoutSeconds: 5
            httpGet:
              path: /health
              port: 8181
          readinessProbe:
            initialDelaySeconds: 1
            periodSeconds: 5
            failureThreshold: 5
            timeoutSeconds: 5
            httpGet:
              path: /health
              port: 8181
          resources:
            limits:
              memory: 10Gi
            requests:
              memory: 128Mi
---
# Source: lakekeeper/templates/catalog/catalog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openhouse-lakekeeper
  labels:
    helm.sh/chart: lakekeeper-0.7.1
    app.kubernetes.io/name: lakekeeper
    app.kubernetes.io/instance: openhouse-lakekeeper
    app.kubernetes.io/version: "0.9.3"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: lakekeeper
    app.kubernetes.io/component: catalog
spec:
  tls:
    - hosts:
        - openhouse.lakekeeper.dev
      secretName: lakekeeper-catalog-tls
  ingressClassName: nginx
  rules:
    - host: openhouse.lakekeeper.dev
      http:
        paths:
          - path: 
            pathType: ImplementationSpecific
            backend:
              service:
                name: openhouse-lakekeeper
                port:
                  name: http
---
# Source: lakekeeper/templates/tests/bootstrap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "openhouse-lakekeeper-test-bootstrap"
  labels:
    helm.sh/chart: lakekeeper-0.7.1
    app.kubernetes.io/name: lakekeeper
    app.kubernetes.io/instance: openhouse-lakekeeper
    app.kubernetes.io/version: "0.9.3"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: lakekeeper
    component: catalog
  annotations:
    "helm.sh/hook": test
spec:
  serviceAccountName: default
  containers:
    - name: base
      image: hub.vtcc.vn:8989/nicolaka/netshoot
      command: ['bash', "-c"]
      args:
        - |
          [...]
  restartPolicy: Never
